fix logo alignment

--- a/packages/global/scss/components/_site-navbar2.scss
+++ b/packages/global/scss/components/_site-navbar2.scss
@@ -31,7 +31,9 @@
           }
         }
         &__center {
+          display: flex;
           align-self: flex-start;
+          justify-content: center;
         }
         &__right {
           display: flex;
